--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handsontable",
+  "name": "handsontable-simple",
   "description": "Handsontable is a JavaScript Spreadsheet Component available for React, Angular and Vue.",
   "homepage": "https://handsontable.com/",
   "repository": {
